# pysequoia

./: .clippy.toml  .codespellrc  .dockerignore  .gitignore  .gitlab-ci.yml  .justfile  .rustfmt.toml  .vale.ini  .woodpecker.yml  CONTRIBUTING.md  Cargo.toml  NEXT.md  README.md  README.org  SECURITY.md  code.py  deny.toml  flake.nix  package.nix  pyproject.toml  pysequoia.pyi  sig.pgp  signing-key.asc  wiktor-fresh.asc  wiktor.asc
.cargo/: audit.toml
.gitea/default_merge_message/: MERGE_TEMPLATE.md
.github/workflows/: audit.yml  before-script-linux.sh  build.yml  ci.yml  direct-minimal-versions.yml  e2e.yml  maturin.yml  nix.yml
.woodpecker/: audit.yml  build.yml  direct-minimal-versions.yml  doc-check-links.yml  doc-pages.yml  e2e.yml  update-deps.yml
ci/: add-comment.sh  audit.dockerfile  build.dockerfile  direct-minimal-versions.dockerfile  docs.dockerfile  e2e.dockerfile  quick-checks.sh  url-validator.sh  vale-to-review.py
doc/: stf-report-1.md  stf-report-2.md
doc/.vale/Vocab/openpgp/: accept.txt
python/pysequoia/: __init__.py  __init__.pyi  packet.pyi
scripts/: check  fix
scripts/ci/: create-github-checks.js  create-gitlab-checks.js  export-shell.ts
scripts/hooks/: pre-push
src/: card.rs  cert.rs  decrypt.rs  encrypt.rs  ks.rs  lib.rs  notation.rs  packet.rs  sign.rs  signature.rs  signer.rs  store.rs  types.rs  user_id.rs  utils.rs  verify.rs  wkd.rs
src/cert/: secret.rs
tests/: test_pysequoia.py
tests/fixtures/: compressed-pubkey.pgp  compressed-sig.pgp  full-key.asc
xtask/: Cargo.toml
xtask/src/: main.rs
