[package]
name = "pysequoia"
version = "0.1.24"
edition = "2021"
description = "Python bindings for Sequoia PGP"
homepage = "https://github.com/wiktor-k/pysequoia"
repository = "https://github.com/wiktor-k/pysequoia"

# The crate is useless for Rust clients, it's mainly used via Python:
# https://pypi.org/project/pysequoia/
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pysequoia"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
card-backend-pcsc = "0.5"
chrono = "0.4"
hex = "0.4.3"
once_cell = "1.20"
openpgp-card = "0.5.0"
openpgp-card-sequoia = { version = "0.2.2", default-features = false }
testresult = "0.4"
sequoia-openpgp = { version = "1", default-features = false, features = [ "crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }

[dependencies.pyo3]
version = "0.23"
# "py-clone" feature added to keep the original behavior but it'd be good to avoid it
# see: https://github.com/PyO3/pyo3/pull/4095
features = ["extension-module", "anyhow", "chrono", "py-clone"]
