[package]
name = "pysequoia"
version = "0.1.29"
edition = "2021"
description = "Python bindings for Sequoia PGP"
homepage = "https://github.com/wiktor-k/pysequoia"
repository = "https://github.com/wiktor-k/pysequoia"
license = "Apache-2.0"

# The crate is useless for Rust clients, it's mainly used via Python:
# https://pypi.org/project/pysequoia/
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pysequoia"
crate-type = ["cdylib"]

[workspace]
members = [".", "xtask"]
resolver = "3"
package.edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
once_cell = "1.21"
sequoia-openpgp = { version = "2", default-features = false, features = [ "crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }

[dependencies.pyo3]
version = "0.28"
# "py-clone" feature added to keep the original behavior but it'd be good to avoid it
# see: https://github.com/PyO3/pyo3/pull/4095
features = ["extension-module", "anyhow", "chrono", "py-clone", "experimental-inspect"]
