[build-system]
requires = ["maturin>=0.14,<2"]
build-backend = "maturin"

[project]
name = "pysequoia"
version = "0.1.30"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
authors = [
  {name = "Wiktor Kwapisiewicz", email = "wiktor@metacode.biz"}
]
keywords = ["openpgp", "pgp", "gpg", "gnupg", "sequoia"]
license = {file = "LICENSE"}
description = "Provides OpenPGP facilities using Sequoia-PGP library"

[project.urls]
homepage = "https://github.com/wiktor-k/pysequoia"
changelog = "https://github.com/wiktor-k/pysequoia/tags"
repository = "https://github.com/wiktor-k/pysequoia"
"Bug Tracker" = "https://github.com/wiktor-k/pysequoia/issues"

[tool.mypy]
# There are a couple of minor issues in the generated stub files that mypy
# doesn't like. Suppressing these warnings.
# See https://github.com/PyO3/pyo3/issues/5137#issuecomment-3384975623
disable_error_code = "override,union-attr"
