[build-system]
requires = ["maturin>=0.14,<2"]
build-backend = "maturin"

[project]
name = "pysequoia"
version = "0.1.33"
requires-python = ">=3.7"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
authors = [
  {name = "Wiktor Kwapisiewicz", email = "wiktor@metacode.biz"}
]
keywords = ["openpgp", "pgp", "gpg", "gnupg", "sequoia"]
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Provides OpenPGP facilities using Sequoia-PGP library"

[project.urls]
homepage = "https://github.com/wiktor-k/pysequoia"
changelog = "https://github.com/wiktor-k/pysequoia/tags"
repository = "https://github.com/wiktor-k/pysequoia"
issues = "https://github.com/wiktor-k/pysequoia/issues"
funding = "https://github.com/sponsors/wiktor-k"

[tool.mypy]
# There are a couple of minor issues in the generated stub files that mypy
# doesn't like. Suppressing these warnings.
# See https://github.com/PyO3/pyo3/issues/5137#issuecomment-3384975623
disable_error_code = "override,union-attr"
mypy_path = ["python"]

[tool.maturin]
python-source = "python"
# workaround for sdist reproducibility
# CHECK https://github.com/PyO3/maturin/issues/2609#issuecomment-2889403876
sdist-generator = "git"
